Primeiros testes GitPages
Primeiros testes de funcionamento dos links pro GitPages (mexi só no index.html por enquanto)

--- a/src/css/components/buttons.css
+++ b/src/css/components/buttons.css
@@ -27,7 +27,7 @@
   border-top: 1px solid gray;
   width: 100%;
   height: 300px;
-  background: url(/src/images/sunflower_sunset_light.jpg) no-repeat top fixed;
+  background: url(../../images/sunflower_sunset_light.jpg) no-repeat top fixed;
 }
 
 .scaleEffect {
